--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "token": "Bot's token",
     "stream": "http://www.skyrock.fm/stream.php/tunein16_64mp3.mp3",
     "streamInfo": "http://www.skyrock.fm/stream.php/tunein16_64mp3.mp3",
-    "ua": "Odyssey Radio Discord bot/1.1.0 (https://github.com/Geo1088/listen.moe-streaming-bot)",
+    "ua": "Odyssey Radio Discord bot/1.1.0 (https://github.com/EspGCreunix/listen.moe-djs-master)",
     "separator": "-",
     "owners": [
         "User ID who should have access to eval",
